--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="Tracker.css">
         <link rel="manifest" href="manifest.json">
         <meta name="theme-color" content="#3c3c3c">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1>Anime Tracker</h1>
@@ -2961,3 +2962,4 @@
         <script src="Tracker.js"></script>
     </body>
 </html>
+
