--- a/notes.html
+++ b/notes.html
@@ -34,7 +34,7 @@
         <textarea id="notes" placeholder="Write your notes here..."></textarea>
         <br>
         <button id="save-btn">Save Notes</button>
-        <button onclick="window.location.href='Tracker.html'">Back</button>
+        <button onclick="window.location.href='index.html'">Back</button>
 
         <script>
             const params = new URLSearchParams(window.location.search);
@@ -55,4 +55,5 @@
     </body>
 
 </html>
+
 
